[gd_scene load_steps=4 format=3 uid="uid://ee5wiviw1k0p"]

[ext_resource type="Script" path="res://scripts/Projectile.gd" id="1_80t0s"]
[ext_resource type="Texture2D" uid="uid://dijvkpobpubwm" path="res://assets/Sushi.png" id="2_b2j06"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tntv2"]
radius = 21.0238

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_80t0s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -19)
scale = Vector2(3, 3)
texture = ExtResource("2_b2j06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, -19)
shape = SubResource("CircleShape2D_tntv2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, -19)
shape = SubResource("CircleShape2D_tntv2")

[node name="Life" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Life" to="." method="_on_life_timeout"]
